--- a/kafka_rest_proxy.yaml
+++ b/kafka_rest_proxy.yaml
@@ -6,8 +6,8 @@ info:
   license:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-host: kafka.myhost.local
-basePath: /v1
+host: 11.11.254.102:8082
+basePath: /
 schemes:
   - http
 paths:
@@ -19,6 +19,10 @@ paths:
         - application/json
       responses:
         '200':
+          headers:
+           Access-Control-Allow-Origin:
+            type: string
+            default: '*'
           description: List of topic names
           schema:
             type: array
@@ -97,4 +101,3 @@ definitions:
     type: object
    partition:
     type: integer
-
