--- a/kafka_rest_proxy.yaml
+++ b/kafka_rest_proxy.yaml
@@ -173,7 +173,49 @@ paths:
         '404':
           description: Topic not found
         '422':
-          description: Unprocessable entity
+          description: Unprocessable entity.
+  '/consumers/{group_name}':
+    post:
+      tags:
+        - consumer
+      description: Create a new consumer instance in the consumer group
+      operationId: createInstanceToGroup
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: group_name
+          in: path
+          description: The name of the consumer group.
+          required: true
+          type: string
+        - name: consumer_request
+          in: body
+          schema:
+            type: object
+            properties:
+              name:
+                description: Name for the consumer instance, which will be used in URLs for the consumer. This must be unique, at least within the proxy process handling the request. If omitted, falls back on the automatically generated ID. Using automatically generated names is recommended for most use cases.
+                type: string
+              format:
+                description: The format of consumed messages, which is used to convert messages into a JSON-compatible form. Valid values "binary", "avro", "json". If unspecified, defaults to “binary”.
+                type: string
+              auto.offset.reset:
+                description: Sets the auto.offset.reset setting for the consumer
+                type: string
+              auto.commit.enable:
+                description: Sets the auto.commit.enable setting for the consumer
+                type: string
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/ConsumerResponse'
+        409:
+          description: Consumer instance with the specified name already exists.
+        422:
+          description: Invalid consumer configuration. One of the settings specified in the request contained an invalid value.
   '/consumers/{group_name}/instances/{instance}':
     delete:
       tags:
@@ -281,4 +323,14 @@ definitions:
         description: ID returned by a previous request using the same schema. This ID corresponds to the ID of the schema in the registry.
       offsets:
         type: array
-        $ref: '#/definitions/Offset'
+        items:
+          $ref: '#/definitions/Offset'
+  ConsumerResponse:
+    type: object
+    properties:
+      instance_id:
+        description: Unique ID for the consumer instance in this group.
+        type: string
+      base_uri:
+        description: Base URI used to construct URIs for subsequent requests against this consumer instance. This will be of the form http://hostname:port/consumers/consumer_group/instances/instance_id.
+        type: string
