--- a/Oceanalytics/Confluent Kafka REST Proxy/javascript/package.json
+++ b/Oceanalytics/Confluent Kafka REST Proxy/javascript/package.json
@@ -5,7 +5,7 @@
   "license": "Unlicense",
   "main": "src/index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --recursive"
+    "test": "./node_modules/.bin/mocha --recursive"
   },
   "dependencies": {
     "superagent": "1.7.1"
